# Chat_terminal

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
chatterminal.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
client/: app.py  config.py  main.py
client/audio/: codec.py  engine.py  jitter_buffer.py  nat.py  stream.py
client/connection/: reconnect.py  tcp_client.py  udp_client.py  ws_client.py
client/crypto/: audio_crypto.py  encrypt.py  file_crypto.py  fingerprint.py  keygen.py
client/db/: calls.py  contacts.py  files.py  messages.py  rooms.py  schema.py
client/handlers/: auth.py  call.py  file.py  message.py  room.py
client/ui/: auth_screen.py  call_overlay.py  chat_view.py  colors.py  divider.py  input_bar.py  notif.py  screen.py  sidebar.py  status_bar.py  verify_screen.py
docs/: ARCHITECTURE.md  AUDIO.md  PROTOCOL.md  SECURITY.md
server/: auth.py  call_manager.py  config.py  files.py  main.py  offline.py  rate_limiter.py  rooms.py  router.py  tcp_server.py  udp_relay.py  ws_server.py
server/db/: calls.py  files.py  messages.py  schema.py  users.py
shared/: constants.py  protocol.py  utils.py
tests/: test_audio.py  test_auth.py  test_crypto.py  test_file_transfer.py  test_message_visible.py  test_performance.py  test_protocol.py  test_send_recv.py
