[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterminal"
version = "1.0.0"
description = "Self-hosted E2E encrypted terminal chat"
requires-python = ">=3.11"
dependencies = [
    "websockets==12.0",
    "bcrypt>=4.1",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "aiosqlite>=0.20",
    "click>=8.1",
]

[project.scripts]
ct-server = "server.main:main"
ct-client = "client.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "client*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
